fix overlay on safari attempt

--- a/src/App.scss
+++ b/src/App.scss
@@ -226,8 +226,8 @@ form,
     background-color: rgba(0, 0, 0, 0.614);
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     z-index: 3;
     margin: 0 auto;
     cursor: auto;
